// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Product Gallery hide gallery when only 1 image 1`] = `
<section
  style={
    Object {
      "height": "500px",
      "position": "absolute",
      "width": "500px",
    }
  }
>
  <section
    className="sc-cJSrbW jVeRsU"
    style={Object {}}
  >
    <section
      className="sc-frDJqD fEPDpr"
    >
      <img
        className="img-fluid sc-hmzhuo knwFZs"
        src="/assets/images/products/premium-sun-dried-mulberries-1.jpeg"
      />
    </section>
  </section>
</section>
`;

exports[`Storyshots Product Gallery stand alone 1`] = `
<section
  style={
    Object {
      "height": "500px",
      "position": "absolute",
      "width": "500px",
    }
  }
>
  <section
    className="sc-cJSrbW jVeRsU"
    style={Object {}}
  >
    <section
      className="sc-frDJqD kJrKOC"
    >
      <img
        className="img-fluid sc-hmzhuo knwFZs"
        src="/assets/images/products/premium-sun-dried-mulberries-1.jpeg"
      />
    </section>
    <section
      className="sc-ksYbfQ kbfaTk"
    >
      <section
        className="sc-hqyNC lpqbrZ"
      >
        <img
          className="sc-kvZOFW gmEGDz"
          onClick={[Function]}
          src="/assets/images/products/premium-sun-dried-mulberries-1.jpeg"
        />
      </section>
      <section
        className="sc-hqyNC lpqbrZ"
      >
        <img
          className="sc-kvZOFW gmEGDz"
          onClick={[Function]}
          src="/assets/images/products/premium-sun-dried-apricots-1.jpg"
        />
      </section>
      <section
        className="sc-hqyNC lpqbrZ"
      >
        <img
          className="sc-kvZOFW gmEGDz"
          onClick={[Function]}
          src="/assets/images/products/premium-raw-walnuts-1.jpeg"
        />
      </section>
    </section>
  </section>
</section>
`;
